# airport

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  test-data.csv  test-results.json
.github/actions/table-summary/: action.yml
.github/workflows/: README.md  demo-help.yml  evaluate-model.yml  help-command.yml  issue-commands.yml  model-pipeline.yml  test-model.yml  test-table-summary.yml  train-model.yml
app/: main.py
app/api/: commands.py
app/core/: config.py  logging.py
app/mocks/: jfrog_service.py
app/models/: jobs.py  validation.py
app/services/: github_service.py  job_manager.py
app/utils/: command_parser.py
bot-server/: docker-compose.yml  pyproject.toml  requirements-dev.txt
bot-server/app/api/: jobs.py  webhooks.py
bot-server/app/mocks/: workflow_service.py
bot-server/app/models/: commands.py  github.py
bot-server/app/services/: command_processor.py  github_service.py
bot-server/app/utils/: command_parser.py  github.py
tests/: conftest.py  test_api.py  test_command_parser.py  test_mocks.py
